feat: 优化结构，mock数据实现登录登出
优化结构，mock数据实现登录登出
