# mock/swagger.yml
@@ -4,88 +4,22 @@ info:
   version: 1.0.0
   title: Mock API
   contact:
-    email: armourcy@email.com
+    email: 122177638@qq.com
   license:
     name: MIT
-    url: https://opensource.org/licenses/MIT
+    url: 'https://opensource.org/licenses/MIT'
 servers:
   - url: /mock-api/v1
 tags:
-  - name: articles
-    description: Articles data related api.
-  - name: roles
-    description: Roles related api.
-  - name: transactions
-    description: Transactions data related api.
   - name: users
     description: Users related api.
 paths:
-  /users:
-    get:
-      tags:
-        - users
-      summary: Get users list
-      description: Return a list of users
-      operationId: getUsers
-      security:
-        - AccessTokenAuth: []
-      parameters:
-        - name: name
-          in: query
-          description: Used to filter users by matched username substring
-          schema:
-            type: string
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: integer
-                    format: int32
-                  data:
-                    type: object
-                    properties:
-                      items:
-                        type: array
-                        items:
-                          $ref: '#/components/schemas/User'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-  /users/register:
-    post:
-      tags:
-        - users
-      summary: Create user
-      description: This can only be done by the logged in user.
-      operationId: register
-      parameters:
-        - name: user
-          in: query
-          required: true
-          description: The data for created user.
-          schema:
-            $ref: '#/components/schemas/User'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: integer
-                    format: int32
   /users/login:
     post:
       tags:
         - users
-      summary: Logs user into the system
-      description: Use username and password to login.
+      summary: 用户登录
+      description: 使用用户名和密码登录
       operationId: login
       parameters:
         - name: username
@@ -101,7 +35,7 @@ paths:
           schema:
             $ref: '#/components/schemas/User/properties/password'
       responses:
-        200:
+        '200':
           description: OK
           headers:
             X-Rate-Limit:
@@ -128,17 +62,17 @@ paths:
                       accessToken:
                         type: string
                         example: admin-token
-        400:
+        '400':
           $ref: '#/components/responses/InvalidUser'
   /users/logout:
     post:
       tags:
         - users
-      summary: Logs out current logged in user session
-      description: Log out current session.
+      summary: 退出登录
+      description: 清除当前session
       operationId: logout
       responses:
-        200:
+        '200':
           description: OK
           content:
             application/json:
@@ -148,130 +82,17 @@ paths:
                   code:
                     type: integer
                     format: int32
-  /users/{username}:
-    get:
-      tags:
-        - users
-      summary: Get user by user name
-      description: Get user by user name.
-      operationId: getUserByName
-      security:
-        - AccessTokenAuth: []
-      parameters:
-        - name: username
-          in: path
-          required: true
-          description: The name that needs to be fetched.
-          schema:
-            type: string
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: integer
-                    format: int32
-                  data:
-                    type: object
-                    properties:
-                      user:
-                        $ref: '#/components/schemas/User'
-        400:
-          $ref: '#/components/responses/InvalidUser'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-    put:
-      tags:
-        - users
-      summary: Updated user
-      description: This can only be done by the logged in user.
-      operationId: updateUser
-      security:
-        - AccessTokenAuth: []
-      parameters:
-        - name: username
-          in: path
-          required: true
-          description: Name that need to be updated.
-          schema:
-            type: string
-        - name: user
-          in: query
-          required: true
-          description: The data for updated user.
-          schema:
-            $ref: "#/components/schemas/User"
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: integer
-                    format: int32
-                  data:
-                    type: object
-                    properties:
-                      user:
-                        $ref: '#/components/schemas/User'
-        400:
-          $ref: '#/components/responses/InvalidUser'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-    delete:
-      tags:
-        - users
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      security:
-        - AccessTokenAuth: []
-      parameters:
-        - name: username
-          in: path
-          required: true
-          description: The name that needs to be deleted.
-          schema:
-            type: string
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: integer
-                    format: int32
-        400:
-          $ref: '#/components/responses/InvalidUser'
-        401:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
   /users/info:
     post:
       tags:
         - users
-      summary: Get current user info
-      description: This can only be done by the logged in user.
+      summary: 获取用户信息
+      description: 获取当前登录用户信息
       operationId: getUserInfo
       security:
         - AccessTokenAuth: []
       responses:
-        200:
+        '200':
           description: OK
           content:
             application/json:
@@ -286,7 +107,7 @@ paths:
                     properties:
                       user:
                         $ref: '#/components/schemas/User'
-        401:
+        '401':
           $ref: '#/components/responses/Unauthorized'
 components:
   securitySchemes:
@@ -317,145 +138,13 @@ components:
     Error:
       type: object
       properties:
-        code:
-          type: string
-        message:
-          type: string
-      required:
-        - code
-        - message
-    Article:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        status:
-          type: string
-          enum:
-            - draft
-            - published
-            - deleted
-        title:
-          type: string
-          example: IG Won World Championship
-        abstractContent:
-          type: string
-          example: Invictus Gaming sweeps Fnatic 3-0 to win League of Legends World Championship
-        fullContent:
-          type: string
-          example: Article details goes here...
-        sourceURL:
-          type: string
-          format: url
-          example: http://www.espn.com/esports/story/_/id/25164094/invictus-gaming-sweeps-fnatic-3-0-win-league-legends-world-championship
-        imageURL:
-          type: string
-          format: url
-          example: https://a1.espncdn.com/combiner/i?img=%2Fphoto%2F2018%2F1103%2Fr458060_1296x729_16%2D9.jpg&w=920&h=518&scale=crop&cquality=80&location=origin&format=jpg
-        timestamp:
-          $ref: '#/components/schemas/Timestamp'
-        platforms:
-          type: array
-          items:
-            type: string
-            enum:
-              - a-platform
-              - b-platform
-              - c-platform
-          uniqueItems: true
-        disableComment:
+        success:
           type: boolean
-          example: false
-        importance:
-          type: integer
-          format: int32
-          enum:
-            - 1
-            - 2
-            - 3
-        author:
-          type: string
-          example: Chong Guo
-        reviewer:
-          type: string
-          example: Chong Guo
-        type:
-          type: string
-          enum:
-            - CN
-            - US
-            - JP
-            - EU
-        pageviews:
-          $ref: '#/components/schemas/Pageviews/properties/pageviews'
+        error:
+          type: object
       required:
-       - id
-       - status
-       - title
-       - timestamp
-       - importance
-       - author
-    Pageviews:
-      type: object
-      properties:
-        key:
-          type: string
-          enum:
-            - PC
-            - Mobile
-            - iOS
-            - Android
-        pageviews:
-          type: integer
-          format: int32
-          example: 1024
-      required:
-        - key
-        - pageviews
-    Transaction:
-      type: object
-      properties:
-        orderId:
-          type: string
-          format: uuid
-        timestamp:
-          $ref: '#/components/schemas/Timestamp'
-        username:
-          type: string
-          example: Chong Guo
-        price:
-          type: number
-          format: double
-        status:
-          type: string
-          enum:
-            - success
-            - pending
-      required:
-        - orderId
-        - timestamp
-        - username
-        - price
-        - status
-    Role:
-      type: object
-      properties:
-        key:
-          type: string
-          example: admin
-        name:
-          type: string
-          example: admin
-        description:
-          type: string
-          example: Super Administrator. Have access to view all pages.
-        routes:
-          $ref: '#/components/schemas/AnyValue'
-      required:
-        - key
-        - name
-        - routes
+        - success
+        - error
     User:
       type: object
       properties:
@@ -483,21 +172,7 @@ components:
         introduction:
           type: string
           example: Always Sunshine
-        roles:
-          type: array
-          items:
-            $ref: '#/components/schemas/Role/properties/key'
       required:
         - id
         - username
         - password
-        - roles
-    Timestamp:
-      oneOf:
-      - type: integer
-        format: int32
-        example: 1559605283
-      - type: string
-        format: date-time
-        example: 2017-07-21T17:32:28Z
-    AnyValue: {}
